// Copyright 2024 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package cloud_vmm_proto;

option go_package = "github.com/google/gce-tcb-verifier/proto/certificates";

// GCECertificateManifest represents a file we keep in the certificate private
// bucket that maps a CloudKMS key version name to its certificate file path.
// This is an append-only manifest. It should only update every key rotation,
// which is infrequent enough to not worry the file will become gigantic.
message GCECertificateManifest {
  message Entry {
    string key_version_name = 1;
    string object_path = 2;
  }

  repeated Entry entries = 1;

  // Given that CloudKMS disallows CryptoKeys with an asymmetric key purpose to
  // have a Primary version, we have to track it out of band in this manifest.
  string primary_signing_key_version_name = 2;

  // We really don't want to have to rotate the root, but we'll store the
  // version it's at anyway.
  string primary_root_key_version_name = 3;
}
